--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_adaptive_scaffold: ^0.1.4
+  uuid: ^3.0.7
+  either_dart: ^0.4.0
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
