--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   either_dart: ^0.4.0
   equatable: ^2.0.5
   flutter_bloc: ^8.1.3
+  shimmer_animation: ^2.1.0+1
 
 dev_dependencies:
   flutter_test:
